# fiducia-messaging.rs

./: .cli-flags.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
.cargo/: README.md  audit.toml
.github/: README.md
.github/workflows/: README.md  ci.yml
docs/: README.md  hardening-followups.md
migrations/: 0001_fiducia_messaging.sql  0001_outbox_inbox.sql  0002_tenant_dedup_and_claim_leases.sql  0003_retention_indexes.sql  README.md
scripts/: README.md
sql/: messaging.sql
src/: README.md  compat_envelope.rs  connect.rs  db.rs  envelope.rs  error.rs  inbox.rs  lib.rs  main.rs  outbox.rs  publisher.rs  stream.rs  subjects.rs  transactional.rs
src/entity/: README.md  message_inbox.rs  message_inbox_consumer.rs  message_outbox.rs  mod.rs
