# Crate manifest for fiducia-messaging: a *library over NATS JetStream* — a
# standard message envelope, the transactional outbox/inbox pattern, and the
# subject taxonomy. It is NOT a broker: JetStream delivers, fiducia-node stays
# the authority, Postgres holds state. The default build requires no external
# services and no network (async-nats and sea-orm are optional).
[package]
name = "fiducia-messaging"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Library over NATS JetStream for fiducia.cloud — a standard message envelope, the transactional outbox/inbox pattern, and the subject taxonomy. Not a broker: fiducia-node decides who may act; envelopes carry a fencing token + idempotency key for effectively-once external effects."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
thiserror = "2"
async-trait = "0.1"
sha2 = "0.11"
# Structured logging facade only (no subscriber, no I/O): a no-op unless the
# embedding service installs a subscriber. Operator-critical events — a message
# parked as failed, a batch drain error — must reach the same log pipeline as
# every other fiducia service instead of raw stderr.
tracing = "0.1"

# The async `Publisher` trait's runtime + the relay binary's `#[tokio::main]`,
# and the `#[tokio::test]` harness. No live services are touched by the tests.
# `signal` powers the relay's graceful SIGTERM/SIGINT drain (run_until).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }

# Optional: a real Postgres-backed outbox/inbox repository (the `postgres`
# feature). SeaORM is the house database layer: entity-API queries where the
# query is expressible, `sea_orm::Statement` for the SKIP LOCKED / backoff SQL.
# Runtime-checked either way, so no DATABASE_URL is needed at build. Schema in
# `migrations/` is applied declaratively (dpm) or via `db::apply_schema` — not
# by a boot-time migrator.
sea-orm = { version = "1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-uuid",
], optional = true }

# Optional: a real NATS JetStream publisher (the `nats` feature). The default
# build must NOT pull this in — the crate builds and tests with no network.
async-nats = { version = "0.49.1", default-features = false, features = ["jetstream", "ring"], optional = true }

# Optional: the JSON log subscriber for the deployable binaries (relay/compat).
# Library consumers install their own subscriber; the default offline build
# stays free of it.
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
    "ansi",
], optional = true }

[features]
default = []
# Postgres-backed outbox/inbox repo + schema apply.
postgres = ["dep:sea-orm"]
# Real JetStream `Publisher` (`NatsPublisher`) + the JSON log subscriber the
# relay/compat binaries initialize (a networked deployable needs real logs).
nats = ["dep:async-nats", "dep:tracing-subscriber"]
# The original codex-authored direct PostgreSQL/NATS service, preserved verbatim
# for wire/API backward-compat: `transactional::{Outbox, OutboxPublisher}` over
# `compat_envelope::Envelope`, plus the `fiducia-messaging-compat` binary.
compat-service = ["postgres", "nats"]

[[bin]]
name = "fiducia-relay"
path = "src/main.rs"

[[bin]]
name = "fiducia-messaging-compat"
path = "src/bin/fiducia-messaging-compat.rs"
required-features = ["compat-service"]

[lib]
name = "fiducia_messaging"
path = "src/lib.rs"
